//指定proto3格式
syntax = "proto3";
//一些生成代码的设置
option java_multiple_files = true;//以外部类模式生成
option java_package = "org.coolbeevip.grpc.labs.demo.grpc";//所在包名
option java_outer_classname = "FileTransferProto";//最外层类名称

service FileTransferService {
  //上传文件
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
}

message FileMeta {
  string name = 1;
  int64 size = 3;
  int64 lastModified = 4;
}

message FileContent {
  bytes content = 1;
}

message UploadFileRequest {
  oneof request {
    FileMeta fileMeta = 1;
    FileContent fileContent = 2;
  }
}

enum ResponseStatus {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message UploadFileResponse {
  string fileId = 1;
  string fileName = 2;
  int64 fileSize = 3;
  ResponseStatus status = 4;
  int64 clientTimeMillis = 5;
  int64 serverTimeMillis = 6;
}